--- a/range-slider.css
+++ b/range-slider.css
@@ -1,6 +1,6 @@
 /** Range Slider Component CSS **/
 .mp-range-slider {
-  font-size: 4vmin;
+  font-size: 18px;
   font-family: Tahoma, Helvetica;
   -moz-user-select: none;
   -webkit-user-select: none;
@@ -26,8 +26,8 @@
 .mprs-triangle {
   width: 0;
   height: 0;
-  border-left: 3vmin solid transparent;
-  border-right: 3vmin solid transparent;
+  border-left: .45em solid transparent;
+  border-right: .45em solid transparent;
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
@@ -35,24 +35,24 @@
 }
 
 .mprs-triangle.from {
-  border-top: 6vmin solid #555;
+  border-top: .9em solid #555;
 }
 
 .mprs-triangle.to {
-  border-bottom: 6vmin solid #555;
+  border-bottom: .9em solid #555;
 }
 
 .mprs-triangle.from.single {
-  border-left: 1.8vmin solid #555;
-  border-right: 1.8vmin solid #555;
-  border-top: 3.6vmin solid #555;
+  border-left: .3em solid #555;
+  border-right: .3em solid #555;
+  border-top: 1.35em solid #555;
 }
 
 /* Provide a larger touch target for the triangles */
 .mprs-triangle-target {
   display: flex;
-  width: 12vmin;
-  height: 12vmin;
+  width: 3em;
+  height: 3em;
   flex-flow: column nowrap;
   align-items: center;
   position:absolute;
@@ -68,19 +68,19 @@
 
 .mprs-triangle-target.from {
   left: 50%;
-  top: -12vmin;
-  margin-left: -6vmin;
+  top: -3em;
+  margin-left: -1.5em;
   justify-content: flex-end;
 }
 
 .mprs-triangle-target.from.single {
-  top: -8.8vmin;
+  top: -2.2em;
 }
 
 .mprs-triangle-target.to {
-  top: 2vmin;
+  top: .5em;
   left: 50%;
-  margin-left: -6vmin;
+  margin-left: -1.5em;
   justify-content: flex-start;
 }
 
@@ -100,7 +100,7 @@
 .mprs-label {
   display: block;
   font-weight: 400;
-  margin: 0 0 2vmin 5vmin;
+  margin: 0 0 .5em 1.25em;
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
@@ -111,7 +111,7 @@ span.mprs-range {
   font-style: italic;
   font-size: 80%;
   color: gray;
-  margin-left: 4px;
+  margin-left: 1em;
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
@@ -120,9 +120,9 @@ span.mprs-range {
 
 .mprs-current-value {
   display: flex;
-  width: 8vmin;
-  height: 6vmin;
-  margin: 1vmin;
+  width: 2em;
+  height: 1.5em;
+  margin: .25em;
   border-left: 0;
   border-right: 0;
   justify-content: center;
@@ -131,8 +131,6 @@ span.mprs-range {
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  font-size: 120%;
-  font-weight: 500;
   outline: 0;
 }
 
@@ -140,18 +138,18 @@ span.mprs-range {
   float: left;
   border-bottom: 2px solid black;
   margin-bottom: 0;
-  margin-top: -1vmin;
+  margin-top: -.25em;
 }
 
 .mprs-current-value.from.single {
-  margin-top: 2vmin;
+  margin-top: .5em;
 }
 
 .mprs-current-value.to {
   float: right;
   border-top: 2px solid black;
   margin-bottom: 0;
-  margin-top: 5vmin;
+  margin-top: 1.25em;
 }
 
 .mprs-current-value.active {
@@ -164,9 +162,22 @@ span.mprs-range {
   border-bottom: 3px solid #1a629b;
 }
 
+.mprs-current-value.from.no-label {
+  margin-top: -1.25em;
+}
+
+.mprs-current-value.to.no-label {
+  margin-top: .25em;
+}
+
+.mprs-value {
+  font-size: 120%;
+  font-weight: 500;
+}
+
 .mprs-slider {
   position: relative;
-  margin: 6vmin 10vmin 0 10vmin;
+  margin: 1.5em 2.5em 0 2.5em;
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
@@ -174,12 +185,12 @@ span.mprs-range {
 }
 
 .mprs-track {
-  height: 2vmin;
+  height: .5em;
   border: 1px solid black;
-  border-radius: 2vmin;
+  border-radius: .5em;
   background-color: white;
   background-image: linear-gradient(#d0d0d0,#dfdfdf);
-  margin: 0 3vmin 7vmin 3vmin;
+  margin: 0 .75em 1.75em .75em;
   position: relative;
   -moz-user-select: none;
   -webkit-user-select: none;
@@ -206,94 +217,23 @@ span.mprs-range {
 }
 
 .mprs-popup {
-  position: absolute;
-  width: 10vmin;
-  height: 10vmin;
-  top: 0;
-  left: 0;
   background-color: white;
-  border-radius: 50%;
   border: 1px solid black;
-  box-shadow: 3px 3px grey;
+  padding: .25em;
   text-align: center;
   vertical-align: middle;
-  line-height: 10vmin;
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
 }
 
-@media screen and (min-width: 300px) and (min-height: 300px) {
-  .mprs-triangle {
-    border-left-width: 9px;
-    border-right-width: 9px;
-  }
-  .mprs-triangle.from {
-    border-top-width: 18px;
-  }
-  .mprs-triangle.from.single {
-    border-top-width: 24px;
-    border-left-width: 6px;
-    border-right-width: 6px;
-  }
-  .mprs-triangle.to {
-    border-bottom-width: 18px;
-  }
+.mprs-popup.to {
+  margin-top: -3.5em;
 }
 
-@media screen and (min-width: 500px) and (min-height: 500px) {
-  .mp-range-slider {
-    font-size: 20px;
-  }
-  .mprs-label {
-    margin: 0 0 10px 25px;
-  }
-  .mprs-current-value {
-    width: 40px;
-    height: 30px;
-    margin: 5px;
-  }
-  .mprs-current-value.to {
-    margin-top: 25px;
-  }
-  .mprs-current-value.from {
-    margin-top: -5px;
-  }
-  .mprs-current-value.from.single {
-    margin-top: 10px;
-  }
-  .mprs-slider {
-    margin: 30px 50px 0 50px;
-  }
-  .mprs-track {
-    height: 10px;
-    border-radius: 10px;
-    margin: 0 15px 35px 15px;
-  }
-  .mprs-popup {
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
-  }
-  .mprs-triangle-target {
-    width: 60px;
-    height: 60px;
-  }
-
-  .mprs-triangle-target.from {
-    top: -60px;
-    margin-left: -30px;
-  }
-
-  .mprs-triangle-target.from.single {
-    top: -44px;
-  }
-
-  .mprs-triangle-target.to {
-    top: 10px;
-    margin-left: -30px;
-  }
+.mprs-popup.from {
+  margin-bottom: .5em;
 }
 
 .mprs-hidden {
